增加测试插件

--- a/SkywalkerServerFramework/Plugin/CMakeLists.txt
+++ b/SkywalkerServerFramework/Plugin/CMakeLists.txt
@@ -5,6 +5,8 @@
 # 功能:
 # #########################################################################
 
+add_subdirectory(Test)
+
 add_subdirectory(LaunchState)
 
 add_subdirectory(Network)
