--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,8 +98,8 @@ macro(SkywalkerServer_Plugin PlugName DirName)
     )
 
     include_directories(
-        ./Public
-        ./Private
+        ./Module
+        ./Object
     )
 
     SkywalkerServer_Source()
