--- a/SkywalkerGameServer/CMakeLists.txt
+++ b/SkywalkerGameServer/CMakeLists.txt
@@ -28,11 +28,13 @@ macro(SkywalkerGameServer_Export TargetName)
 endmacro()
 
 # 包含路径
+set(skywalker_server_path "../")
 set(skywalker_tools_path "../SkywalkerTools")
 set(skywalker_server_framework_path "../SkywalkerServerFramework")
 
 # 头文件目录
 include_directories(
+    ${skywalker_server_path}
     ${skywalker_tools_path}
     ${skywalker_server_framework_path}
 )
